# Egg-counter

./: .gitignore  camera_scanner.py  capture_images.py  object_measurer.py  pyproject.toml
.claude/: settings.local.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-detection-pipeline/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-HUMAN-UAT.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-data-persistence/: 02-01-PLAN.md  02-01-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-RESEARCH.md  02-VALIDATION.md  (+1 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
config/: bytetrack_eggs.yaml  settings.yaml  zone.json
data/dataset/: data.yaml  data_multiclass.yaml
deploy/: cloudflared-config.yml  cloudflared-eggsentry.service  egg-counter-dashboard.service  egg-counter-detector.service  egg-counter.env.example
docs/: remote-access.md
src/egg_counter/: __init__.py  auth.py  cli.py  config.py  db.py  detector.py  logger.py  pipeline.py  preview.py  repository.py  scheduler.py  size_classifier.py  tracker.py  zone.py
tests/: conftest.py  test_dashboard_assets.py  test_db.py  test_detector.py  test_logger.py  test_pipeline.py  test_preview.py  test_repository.py  test_setup_zone.py  test_size_classifier.py  test_tracker.py  test_web_api.py  test_websocket.py  test_zone.py
tools/: setup_zone.py
(+25 files in other folders)
